--- a/qta/templates/mainscreen.html
+++ b/qta/templates/mainscreen.html
@@ -12,7 +12,7 @@
         {% block content %}
 
        
-        <a href="">new ticket</a></br>
+        <a href="ticket">new ticket</a></br>
 
 
         <a href=''>New</a></br>
