--- a/qtaproject/templates/base.html
+++ b/qtaproject/templates/base.html
@@ -7,7 +7,7 @@
     <body bgcolor: #023373>
         <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
             <div class="container">
-                <a class="navbar-brand" href="#">Home</a>
+                <a class="navbar-brand" href='#'>Home</a>
                 <button class="navbar-toggler" type="button" data-bstoggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" arialabel="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
