--- a/qta/templates/ticket.html
+++ b/qta/templates/ticket.html
@@ -4,40 +4,50 @@
     <title>Nuevo Ticket</title>
 </head>
 <body>
+{% extends 'base.html' %}
+{% block content %}
+<img style="width: 110px; height: 55px; left: 0px; top: 0px; position: absolute" src="https://i.postimg.cc/0yk5M4qN/Logo2.png" />
 
-<h1>Nuevo Ticket</h1>
 
-<form method="post">
-    {% csrf_token %}
-    <label for="ticket_number">Ticket number:</label>
-    <input type="text" id="campo1" name="ticket_number" required><br>
-
-    <label for="call_time">Call time:</label>
-    <input type="datetime-local" id="campo2" name="call_time" required><br>
-
-    <label for="priority">Priority:</label>
-    <input type="text" id="campo3" name="priority" required><br>
-
-    <label for="discussion">Discussion:</label>
-    <input type="text" id="campo4" name="discussion" required><br>
-
-    <label for="state">State:</label>
-    <input type="text" id="campo5" name="state" required><br>
-
-    <label for="source">Source:</label>
-    <input type="text" id="campo6" name="source" required><br>
-
-    <label for="equipment">Equipment:</label>
-    <input type="text" id="campo7" name="equipment" required><br>
-
-    <label for="contact_number">Contact number:</label>
-    <input type="text" id="campo9" name="contact_number" required><br>
-
-    <label for="contact_name">Contact name:</label>
-    <input type="text" id="campo8" name="contact_name" required><br>
-
-    <button type="submit">Crear Ticket</button>
-</form>
-
+<div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+       <div class="card">
+          <div class="card-body">
+            <h1>Nuevo Ticket</h1>
+            <form method="post">
+                {% csrf_token %}
+                <label for="ticket_number">Ticket number:</label>
+                <input type="text" id="campo1" name="ticket_number" required><br>
+            
+                <label for="call_time">Call time:</label>
+                <input type="datetime-local" id="campo2" name="call_time" required><br>
+            
+                <label for="priority">Priority:</label>
+                <input type="text" id="campo3" name="priority" required><br>
+            
+                <label for="discussion">Discussion:</label>
+                <input type="text" id="campo4" name="discussion" required><br>
+            
+                <label for="state">State:</label>
+                <input type="text" id="campo5" name="state" required><br>
+            
+                <label for="source">Source:</label>
+                <input type="text" id="campo6" name="source" required><br>
+            
+                <label for="equipment">Equipment:</label>
+                <input type="text" id="campo7" name="equipment" required><br>
+            
+                <label for="contact_number">Contact number:</label>
+                <input type="text" id="campo9" name="contact_number" required><br>
+            
+                <label for="contact_name">Contact name:</label>
+                <input type="text" id="campo8" name="contact_name" required><br>
+            
+                <button href="mainscreen" type="submit">Crear Ticket</button>
+            </form>
+          </div>
+       </div>
+    </div>
+{% endblock content %}
 </body>
 </html>
