--- a/qta/templates/home.html
+++ b/qta/templates/home.html
@@ -24,7 +24,7 @@
             <div style="width: 424.78px; height: 152.95px; left: 80px; top: 0px; position: absolute; color: #63E0FF; font-size: 65px; font-family: Lato; font-weight: 700; word-wrap: break-word">Welcome to<br/>QTA Software</div>
             <div style="width: 463.58px; height: 263.75px; left: 82.51px; top: 200px; position: absolute; color: #000000; font-size: 25px; font-family: Lato; font-weight: 400; word-wrap: break-word">Our QTA software is designed to simplify and optimise your support<br/>experience. Whether you run a business, a healthcare organisation<br/>or any entity that requires an effective technical problem management<br/>system, QTA is here to make your life easier.</div>
             <div style="width: 183.54px; height: 60.79px; left: 180px; top: 470px; position: absolute; background: #34A2FF; border-radius: 100px"></div>
-            <a href= "mainscreen" style= "width: 78.66px; height: 29.41px; left: 238px; top: 485px; position: absolute; color: white; font-size: 20px; font-family: Lato; font-weight: 700; word-wrap: break-word">START</a>
+            <a href= {% url "mainscreen" %} style= "width: 78.66px; height: 29.41px; left: 238px; top: 485px; position: absolute; color: white; font-size: 20px; font-family: Lato; font-weight: 700; word-wrap: break-word">START</a>
           </div>
         {% endblock content %}
     </body>
