--- a/qtaproject/templates/base.html
+++ b/qtaproject/templates/base.html
@@ -7,16 +7,21 @@
     <body bgcolor: #023373>
         <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
             <div class="container">
-                <a class="navbar-brand" href='#'>Home</a>
+                <a class="navbar-brand" href={% url "home" %}>Home</a>
                 <button class="navbar-toggler" type="button" data-bstoggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" arialabel="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
-                        <a class="nav-link" href="mainscreen">Aplication</a>
+                        <a class="nav-link" href={% url 'mainscreen' %}>Aplication</a>
                         <a class="nav-link" href="#">About</a>
                         <a class="nav-link" href="#">Service</a>
                         <a class="nav-link" href="#">More</a>
+                        {% if request.user.is_authenticated %}
+                        <a class="nav-link" href={% url "exit" %}>Sign out</a>
+                        {% else %}
+                        <a class="nav-link" href={% url "login" %} >Sign in</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
