--- a/qtaproject/templates/base.html
+++ b/qtaproject/templates/base.html
@@ -2,6 +2,11 @@
 <html lang="en">
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+        <style>
+            body {
+                background-color: #023373;
+            }
+        </style>
     </head>
 
     <body bgcolor: #023373>
@@ -30,6 +35,7 @@
                 {% block content %}
                 {% endblock content %}
            </div>
+        <img style="width: 110px; height: 55px; left: 0px; top: 0px; position: absolute" src="https://i.postimg.cc/0yk5M4qN/Logo2.png" />
     </body>
 </html>
 
