error fix in redirection of new ticket

--- a/qta/templates/ticket.html
+++ b/qta/templates/ticket.html
@@ -53,7 +53,7 @@
                 <p for="contact_name"><b>Contact name: </b><input type="text" id="campo8" name="contact_name" required><br></p>
 
             
-                <button href="mainscreen" type="submit" style="background-color: #023373; color: #ffffff">Crear Ticket</button>
+                <button type="submit" style="background-color: #023373; color: #ffffff">Crear Ticket</button>
             </form>
           </div>
        </div>
